# Basic_Win32_Application

./: .gitignore  AppState.h  ButtonManager.cpp  CMakeLists.txt  README.md  Resources.rc  WindowProcHandler.cpp  WindowProcHandler.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/app/: ButtonManager.h
src/: ButtonManager.cpp  WindowProcHandler.cpp  main.cpp
